sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
11/16/2025:
[+] Added Crazy Cattle 3D

11/15/2025:
[+] Added Cluster Rush (Thanks for the suggestion!)
[+] Added People Playground (Thanks for the suggestion!)
[+] Added Super Mario World (Thanks for the suggestion!)
[+] Added Steal a Brainrot (Thanks for the suggestion Hudsyn!)
[+] Added Asteroids (Thanks for the suggestion Jacob!)
[+] Added Lego Batman: The Video Game (Thanks for the suggestion!)
[+] Added The Legend of Zelda: A Link to the Past (Thanks for the
suggestion colin_is_a_weiner2610)
[+] Added The Legend of Zelda: Ocarina of Time (Thanks for the suggestion
colin_is_a_weiner2610)
[+] Added Tanuki Sunset (Thanks for the suggestion Sophia)

11/13/2025:
[+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)

11/12/2025:
[+] Added Half-Life 1 (Thanks for the suggestion ThatOneAmerican!)
[+] Added Pokémon Black 2 (Thanks for the suggestion BubbaNator5000!)
[+] Added Pokémon White 2 (Thanks for the suggestion BubbaNator5000!)
[+] Added Slender: The Eight Pages (Thanks for the suggestion
enriqueeeeeeeee)
[+] I kinda realized the "Cooking Mama" game was misleading, so I changed 
the name and added the real Cooking Mama.

11/11/2025:
[+] Added Super Mario Bros. 1 & 3 (Thanks for the suggestion!)
[+] Added Spongebob's Truth or Square (Thanks for the suggestion!)
[+] Added Mario Paint (Thanks for the suggestion!)
[+] Added Pokémon FireRed (Thanks for the suggestion!)
[+] Added Papa's Wingeria (Thanks for the suggestion Kimmy J!)
[+] Added Nazi Zombies Portable (Thanks for the suggestion) [I suppose this
is what you mean by "Call of Duty Zombies Browser Edition"]
[+] Added Pokémon Emerald (I accidentally deleted the suggestion before