@@ -1,4 +1,5 @@
 11/16/2025:
+[+] Added an A.I. assistant
 [+] Added Crazy Cattle 3D
 
 11/15/2025:
