@@ -21,6 +21,7 @@ their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
 11/16/2025:
+[+] Added an A.I. assistant
 [+] Added Crazy Cattle 3D
 
 11/15/2025:
